--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "I-would-never-send-my-kids-to-school"]
 	path = I-would-never-send-my-kids-to-school
 	url = https://github.com/L-M-Sherlock/Chinese-Translation-I-would-never-send-my-kids-to-school
+[submodule "History-of-spaced-repetition"]
+	path = History-of-spaced-repetition
+	url = https://github.com/L-M-Sherlock/Chinese-Translation-History-of-spaced-repetition
